// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputText /> renders the component disabled 1`] = `
.c0 {
  border: 2px solid #DCDBE2;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline-width: 0;
  border: 2px solid #4A3EDE;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #DCDBE2;
}

.c0:disabled {
  background-color: #EAEAEE;
}

<input
  class="c0"
  disabled=""
  name="name"
/>
`;

exports[`<InputText /> renders the component with error 1`] = `
.c0 {
  border: 2px solid #EE0505;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline-width: 0;
  border: 2px solid #4A3EDE;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #DCDBE2;
}

.c0:disabled {
  background-color: #EAEAEE;
}

<input
  class="c0"
  name="name"
/>
`;

exports[`<InputText /> renders the component with focus 1`] = `
.c0 {
  border: 2px solid #DCDBE2;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline-width: 0;
  border: 2px solid #4A3EDE;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #DCDBE2;
}

.c0:disabled {
  background-color: #EAEAEE;
}

<input
  class="c0"
  name="name"
/>
`;

exports[`<InputText /> renders the component with isValid set as true 1`] = `
.c0 {
  border: 2px solid #1EC06A;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline-width: 0;
  border: 2px solid #4A3EDE;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #DCDBE2;
}

.c0:disabled {
  background-color: #EAEAEE;
}

<input
  class="c0"
  name="name"
/>
`;

exports[`<InputText /> renders the component with the required props 1`] = `
.c0 {
  border: 2px solid #DCDBE2;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline-width: 0;
  border: 2px solid #4A3EDE;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #DCDBE2;
}

.c0:disabled {
  background-color: #EAEAEE;
}

<input
  class="c0"
  name="name"
/>
`;
